@@ -7,7 +7,11 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.spin.core.SpinContext;
 import org.spin.core.throwable.CloneFailedException;
+import org.spin.core.throwable.SimplifiedException;
+import org.spin.core.util.ClassUtils;
+import org.spin.core.util.ObjectUtils;
 import org.spin.core.util.ReflectionUtils;
+import org.spin.core.util.StringUtils;
 import org.spin.data.core.IEntity;
 
 import javax.persistence.Entity;
@@ -15,6 +19,10 @@ import javax.persistence.Id;
 import javax.persistence.ManyToOne;
 import javax.persistence.OneToOne;
 import javax.persistence.Transient;
+import java.beans.BeanInfo;
+import java.beans.IntrospectionException;
+import java.beans.Introspector;
+import java.beans.PropertyDescriptor;
 import java.lang.annotation.Annotation;
 import java.lang.reflect.Field;
 import java.lang.reflect.InvocationTargetException;
@@ -25,7 +33,9 @@ import java.util.Collection;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Set;
+import java.util.concurrent.ConcurrentHashMap;
 import java.util.stream.Collectors;
 
 /**
@@ -35,6 +45,7 @@ import java.util.stream.Collectors;
  */
 public abstract class EntityUtils {
     private static final Logger logger = LoggerFactory.getLogger(EntityUtils.class);
+    private static final Map<String, Map<String, EntityUtils.PropertyDescriptorWrapper>> CLASS_PROPERTY_CACHE = new ConcurrentHashMap<>();
 
     /**
      * 将s对象属性，copy至d，遇到@Entity类型，只copy一层
@@ -43,20 +54,19 @@ public abstract class EntityUtils {
      * @param depth  copy层次
      * @return 返回一个实体
      */
-    public static <T> T getDto(final T entity, final int depth) {
+    public static <T> T getDTO(final T entity, final int depth) {
         if (entity == null)
             return null;
-        final Class dcls = entity.getClass();
         final Class<?> tcls = Hibernate.getClass(entity);
         final T target;
         try {
             //noinspection unchecked
-            target = (T) tcls.newInstance();
+            target = (T) tcls.getConstructor().newInstance();
         } catch (Exception e) {
             logger.error("Can not create new Entity instance:[" + tcls.getName() + "]", e);
             return null;
         }
-        ReflectionUtils.doWithFields(dcls, f -> {
+        ReflectionUtils.doWithFields(tcls, f -> {
             String getM = f.getName().substring(0, 1).toUpperCase() + f.getName().substring(1);
             Method getMethod = ReflectionUtils.findMethod(tcls, (f.getType().equals(boolean.class) || f.getType().equals(Boolean.class) ? "is" : "get") + getM);
             Method setMethod = ReflectionUtils.findMethod(tcls, "set" + getM, f.getType());
@@ -74,13 +84,19 @@ public abstract class EntityUtils {
                         PersistentBag bag = (PersistentBag) d_;
                         bag.clearDirty();
                         Object[] array = bag.toArray();
-                        List list = Arrays.stream(array).map(obj -> ProxyFactory.isProxyClass(obj.getClass()) ? getDto(obj, 0) : obj).collect(Collectors.toList());
+                        List list = Arrays.stream(array).map(obj -> ProxyFactory.isProxyClass(obj.getClass()) ? getDTO(obj, 0) : obj).collect(Collectors.toList());
                         setMethod.invoke(target, list);
                     }
-                } else if (f.getType().getAnnotation(Entity.class) != null)
-                    setMethod.invoke(target, getDto(getMethod.invoke(entity), depth - 1));
-                else
+                } else if (f.getType().getAnnotation(Entity.class) != null) {
+                    setMethod.invoke(target, getDTO(getMethod.invoke(entity), depth - 1));
+                } else if (Objects.nonNull(ClassUtils.wrapperToPrimitive(f.getType())) || CharSequence.class.isAssignableFrom(f.getType())) {
+                    // 基本类型或字符串，直接赋值字段
+                    ReflectionUtils.makeAccessible(f);
+                    f.set(target, getMethod.invoke(entity));
+                } else {
+                    // 其他类型，调用set方法
                     setMethod.invoke(target, getMethod.invoke(entity));
+                }
             } catch (InvocationTargetException e) {
                 logger.error("Copy entity field error:[" + tcls.getName() + "|" + f.getName() + "]", e);
             }
@@ -163,7 +179,7 @@ public abstract class EntityUtils {
         try {
             @SuppressWarnings("unchecked")
             Class<T> clazz = (Class<T>) src.getClass();
-            T target = clazz.newInstance();
+            T target = clazz.getConstructor().newInstance();
             Set<String> fields = Arrays.stream(clazz.getFields()).map(Field::getName).collect(Collectors.toSet());
             copyTo(src, target, fields);
             return target;
@@ -219,6 +235,182 @@ public abstract class EntityUtils {
     }
 
     /**
+     * 将Map转换为对象
+     * <p>
+     * 复合属性，请在语句中指定别名为实体属性的路径。如createUser.id对应createUser的id属性。<br>
+     * 如果Map中存在某些Key不能与实体的属性对应，将被舍弃。
+     * </p>
+     */
+    public static <T> T wrapperMapToBean(Class<T> type, Map<String, Object> values) throws IllegalAccessException, InstantiationException, IntrospectionException, InvocationTargetException {
+        T bean = type.newInstance();
+        Map<String, EntityUtils.PropertyDescriptorWrapper> props = CLASS_PROPERTY_CACHE.get(type.getName());
+        if (null == props) {
+            PropertyDescriptor[] propertyDescriptors = propertyDescriptors(type);
+            props = new HashMap<>();
+            Method writer;
+            for (PropertyDescriptor descriptor : propertyDescriptors) {
+                writer = descriptor.getWriteMethod();
+                if (writer != null)
+                    props.put(descriptor.getName().toLowerCase(), new EntityUtils.PropertyDescriptorWrapper(descriptor, writer));
+            }
+            CLASS_PROPERTY_CACHE.put(type.getName(), props);
+            CLASS_PROPERTY_CACHE.put(type.getName(), props);
+        }
+        if (props.size() == 0)
+            return bean;
+        int off;
+        int next;
+        int depth;
+        String p;
+        String[] propName = new String[100];
+        Object[] args = new Object[1];
+        Map<String, EntityUtils.PropertyDescriptorWrapper> workerProps;
+        for (Map.Entry<String, Object> entry : values.entrySet()) {
+            off = 0;
+            depth = 0;
+            p = entry.getKey().toLowerCase();
+            while ((next = p.indexOf('.', off)) != -1) {
+                propName[depth++] = p.substring(off, next);
+                off = next + 1;
+            }
+            propName[depth++] = (p.substring(off));
+            if (depth == 1) {
+                EntityUtils.PropertyDescriptorWrapper prop = props.get(p);
+                if (null == prop)
+                    continue;
+                args[0] = ObjectUtils.convert(prop.protertyType, entry.getValue());
+                prop.writer.invoke(bean, args);
+                continue;
+            }
+            int i = 0;
+            Object worker = bean;
+            Class<?> propType;
+            workerProps = getBeanPropertyDes(type);
+            while (depth != i) {
+                EntityUtils.PropertyDescriptorWrapper prop = workerProps.get(propName[i]);
+                if (null == prop) {
+                    ++i;
+                    continue;
+                }
+                propType = prop.protertyType;
+                if (i != depth - 1 && IEntity.class.isAssignableFrom(propType)) {
+                    Object ib = prop.reader == null ? null : prop.reader.invoke(worker);
+                    if (null == ib) {
+                        ib = propType.newInstance();
+                        args[0] = ObjectUtils.convert(propType, ib);
+                        prop.writer.invoke(worker, args);
+                    }
+                    workerProps = getBeanPropertyDes(propType);
+                    worker = ib;
+                    ++i;
+                    continue;
+                }
+                if (i == depth - 1) {
+                    args[0] = ObjectUtils.convert(propType, entry.getValue());
+                    prop.writer.invoke(worker, args);
+                }
+                ++i;
+            }
+        }
+        return bean;
+    }
+
+    public static <T> List<T> wrapperMapToBeanList(Class<T> type, List<Map<String, Object>> values) {
+        return values.stream().map(m -> {
+            try {
+                return wrapperMapToBean(type, m);
+            } catch (Exception e) {
+                throw new SimplifiedException("Bean convert fail");
+            }
+        }).collect(Collectors.toList());
+    }
+
+
+    /**
+     * 将Map转换为对象
+     * <p>
+     * 复合属性，请在语句中指定别名为实体属性的路径。如createUser.id对应createUser的id属性。<br>
+     * 如果Map中存在某些Key不能与实体的属性对应，将被舍弃。
+     * </p>
+     * 由于递归实现效率低下，不建议使用
+     */
+    @Deprecated
+    public static <T> T wrapperMapToBean(Class<T> type, Map<String, Object> values, String propPrefix) throws IllegalAccessException, InstantiationException, IntrospectionException, InvocationTargetException {
+        T bean = type.newInstance();
+        Map<String, PropertyDescriptorWrapper> props = CLASS_PROPERTY_CACHE.get(type.getName());
+        if (null == props) {
+            PropertyDescriptor[] propertyDescriptors = propertyDescriptors(type);
+            if (null == propertyDescriptors || 0 == propertyDescriptors.length)
+                return type.newInstance();
+            props = new HashMap<>();
+            for (PropertyDescriptor descriptor : propertyDescriptors) {
+                Method writer = descriptor.getWriteMethod();
+                if (writer != null)
+                    props.put(descriptor.getName().toLowerCase(), new PropertyDescriptorWrapper(descriptor, writer));
+            }
+            CLASS_PROPERTY_CACHE.put(type.getName(), props);
+        }
+
+        for (Map.Entry<String, Object> entry : values.entrySet()) {
+            if (StringUtils.isNotEmpty(propPrefix) && !entry.getKey().toLowerCase().startsWith(propPrefix))
+                continue;
+            String propName = StringUtils.isEmpty(propPrefix) ? entry.getKey().toLowerCase() : entry.getKey().substring(propPrefix.length() + 1).toLowerCase();
+            int index = propName.indexOf('.');
+            if (index > 0) {
+                propName = propName.substring(0, index);
+                if (props.containsKey(propName)) {
+                    PropertyDescriptorWrapper prop = props.get(propName);
+                    Object tmp = wrapperMapToBean(prop.protertyType, values, StringUtils.isEmpty(propPrefix) ? propName : propPrefix + "." + propName);
+                    Object[] args = new Object[1];
+                    args[0] = tmp;
+                    prop.writer.invoke(bean, args);
+                }
+            } else {
+                if (props.containsKey(propName)) {
+                    PropertyDescriptorWrapper prop = props.get(propName);
+                    Object[] args = new Object[1];
+                    args[0] = ObjectUtils.convert(prop.protertyType, entry.getValue());
+                    prop.writer.invoke(bean, args);
+                }
+            }
+        }
+        return bean;
+    }
+
+    public static Map<String, PropertyDescriptorWrapper> getBeanPropertyDes(Class<?> type) throws IntrospectionException {
+        Map<String, PropertyDescriptorWrapper> props = CLASS_PROPERTY_CACHE.get(type.getName());
+        if (null == props) {
+            PropertyDescriptor[] propertyDescriptors = propertyDescriptors(type);
+            props = new HashMap<>();
+            Method writer;
+            for (PropertyDescriptor descriptor : propertyDescriptors) {
+                writer = descriptor.getWriteMethod();
+                if (writer != null)
+                    props.put(descriptor.getName().toLowerCase(), new PropertyDescriptorWrapper(descriptor, writer));
+            }
+            CLASS_PROPERTY_CACHE.put(type.getName(), props);
+        }
+        return props;
+    }
+
+    public static PropertyDescriptor[] propertyDescriptors(Class<?> c) throws IntrospectionException {
+        BeanInfo beanInfo = Introspector.getBeanInfo(c);
+        return beanInfo.getPropertyDescriptors();
+    }
+
+    public static List<Method> getterMethod(Class<?> c) throws IntrospectionException {
+        PropertyDescriptor[] ps;
+        List<Method> list = new ArrayList<>();
+        ps = propertyDescriptors(c);
+        for (PropertyDescriptor p : ps) {
+            if (p.getReadMethod() != null && p.getWriteMethod() != null) {
+                list.add(p.getReadMethod());
+            }
+        }
+        return list;
+    }
+
+    /**
      * 判断字段是否是映射到数据库
      */
     private static boolean isDbColumn(Field field) {
@@ -229,5 +421,19 @@ public abstract class EntityUtils {
             }
         }
         return true;
+    }
+
+    public static class PropertyDescriptorWrapper {
+        public PropertyDescriptor descriptor;
+        public Class<?> protertyType;
+        public Method reader;
+        public Method writer;
+
+        public PropertyDescriptorWrapper(PropertyDescriptor descriptor, Method writer) {
+            this.descriptor = descriptor;
+            this.protertyType = descriptor.getPropertyType();
+            this.reader = descriptor.getReadMethod();
+            this.writer = writer;
+        }
     }
 }
